--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,23 @@
     <string name="app_name">Travel</string>
 
     <string name="password">Password</string>
+    <string-array name="Destination">
+        <item>Egypt</item>
+        <item>Palestine</item>
+        <item>Italy</item>
+        <item>France</item>
+        <item>Spain</item>
+        <item>United Kingdom</item>
+        <item>Germany</item>
+        <item>China</item>
+        <item>Russia</item>
+        <item>Iraq</item>
+        <item>Syria</item>
+        <item>Saudi Arabia</item>
+        <item>Libya</item>
+        <item>Tunisia</item>
+        <item>Morocco</item>
+        <item>USA</item>
+
+    </string-array>
 </resources>
