--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,29 +5,27 @@
     <string-array name="Destination">
         <item>Egypt</item>
 
-        <item>Palestine</item>
+
+
+
         <item>Italy</item>
-        <item>France</item>
-        <item>Spain</item>
-        <item>United Kingdom</item>
-
-        <item>Germany</item>
-        <item>China</item>
         <item>Russia</item>
-        <item>Iraq</item>
-        <item>Syria</item>
-
         <item>Saudi Arabia</item>
         <item>Libya</item>
-        <item>Tunisia</item>
+        <item>France</item>
+
+        <item>Spain</item>
+        <item>China</item>
+        <item>Palestine</item>
         <item>Morocco</item>
-        <item>USA</item>
+        <item>Germany</item>
 
         <item>Cairo</item>
         <item>Alexandria</item>
         <item>Luxor</item>
         <item>Aswan</item>
         <item>Fayoum</item>
+        <item>Giza</item>
 
     </string-array>
 
